force-app/main/default/objects/VersaPay_Product_Payment__c/fields/MegaSys_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>MegaSys_Export_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MegaSys Export Date</label>
    <type>DateTime</type>
</CustomField>