force-app/main/default/objects/VersaPay_Product_Payment__c/fields/Payment_Posted_To_VersaPay_On__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posted_To_VersaPay_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Posted To VersaPay On</label>
    <type>DateTime</type>
</CustomField>