force-app/main/default/objects/VersaPay_Product_Payment__c/fields/To_Process_On__c.field-meta.xml
<CustomField>
    <fullName>To_Process_On__c</fullName>
    <description>Date when debit transaction related to this record will be processed by VersaPay</description>
    <encryptionScheme>None</encryptionScheme>
    <label>To Process On</label>
    <type>DateTime</type>
</CustomField>