force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_From_Account__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_From_Account__c</fullName>
    <description>Name of the originating account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VersaPay From Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>