force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_Payment_Error__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Payment_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VersaPay Payment Error</label>
    <type>TextArea</type>
</CustomField>