force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_To_Account__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_To_Account__c</fullName>
    <description>Name of the recipient account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VersaPay To Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>