force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_To_Fund_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_To_Fund_Token__c</fullName>
    <description>VersaPay To Fund Token</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VersaPay To Fund Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>