force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Token_Number__c</fullName>
    <description>VersaPay transaction identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VersaPay Token Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>