force-app/main/default/objects/VersaPay_Product_Payment__c/validationRules/Invalid_State_compbutNSF.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_State_compbutNSF</fullName>
    <active>true</active>
    <description>Invalid state transition from Completed but NSFed</description>
    <errorConditionFormula>IF( AND((ISPICKVAL(PRIORVALUE(VersaPay_State__c), &apos;completed_but_nsfed&apos;)), (ISPICKVAL(VersaPay_State__c, &apos;completed&apos;))), true, false)</errorConditionFormula>
    <errorDisplayField>VersaPay_State__c</errorDisplayField>
    <errorMessage>Invalid state transition from Completed but NSFed</errorMessage>
</ValidationRule>