force-app/main/default/objects/VersaPay_Product_Payment__c/validationRules/Invalid_State_InProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_State_InProgress</fullName>
    <active>true</active>
    <description>Invalid state transition from In Progress</description>
    <errorConditionFormula>IF( AND((ISPICKVAL(PRIORVALUE(VersaPay_State__c), &apos;in_progress&apos;)), (ISPICKVAL(VersaPay_State__c, &apos;new&apos;))), true, false)</errorConditionFormula>
    <errorDisplayField>VersaPay_State__c</errorDisplayField>
    <errorMessage>Invalid state transition from In Progress</errorMessage>
</ValidationRule>