force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/All_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_Token_Number__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Posted_To_VersaPay_On__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Created Today</label>
</ListView>