force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/All_Created_Yesterday.listView-meta.xml
<ListView>
    <fullName>All_Created_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_Token_Number__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Created Yesterday</label>
</ListView>