force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/All_Updated_Today.listView-meta.xml
<ListView>
    <fullName>All_Updated_Today</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_Token_Number__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>VersaPay_To_Account__c</columns>
    <columns>Payment_Posted_To_VersaPay_On__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Updated Today</label>
</ListView>